footer fixed with Hopsworks AB, 2022

--- a/themes/berbera/layouts/_default/baseof.html
+++ b/themes/berbera/layouts/_default/baseof.html
@@ -81,7 +81,7 @@
 
     <footer class="footer text-center">
         <div class="container">
-            <span class="text-muted">There are {{ len .Site.RegularPages }} notebooks and they are available on <a href="https://github.com/logicalclocks/hops-examples">GitHub</a>. Copyright &copy; Logical Clocks AB, <time datetime="2021">2021</time>.</span>
+            <span class="text-muted">There are {{ len .Site.RegularPages }} notebooks and they are available on <a href="https://github.com/logicalclocks/hops-examples">GitHub</a>. Copyright &copy; Hopsworks AB, <time datetime="2022">2022</time>.</span>
         </div>
     </footer>
 
